hello_world/service.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-helloworld
  namespace: dev
  labels:
    name: svc-helloworld
spec:
  # type: NodePort
  selector:
    app: pod-helloworld
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      # nodePort: 30000
