hello_world/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-helloworld
  namespace: dev
  labels:
    name: gateway-helloworld
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 8080
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-helloworld
  namespace: dev
  labels:
    name: vs-helloworld
spec:
  hosts:
    - "*"
  gateways:
    - gateway-helloworld
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: svc-helloworld.dev.svc.cluster.local
            port:
              number: 8080
